Fixed alignment issue with gallery flip cards, added extra padding to ensure page flow is preserved on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,4 +333,8 @@ header.container-fluid {
 	.nav-item{
 		padding:2px;
 	}
+
+	.card-single{
+		padding-bottom:70%;
+	}
 }
